--- a/css/styles.css
+++ b/css/styles.css
@@ -658,13 +658,10 @@ body {
   padding: 20px 24px;
   border: 1px solid #EEEEEE;
   border-top: none;
-  
 }
 .projects-container{
   position: relative;
   overflow: hidden; 
-
- 
 }
 .projects-backdrop{
   display: block;
@@ -678,7 +675,6 @@ body {
   background: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
 .projects-backdrop p{
   margin: 0;
@@ -690,6 +686,42 @@ body {
 }
 .projects-link:hover .projects-backdrop{
   transform: translateY(0);
-
-
 }
+.backdrop-modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 528px;
+  min-height: 581px;
+
+  transform: translate(-50%, -50%);
+  background: var(--white-bg-color);
+} 
+
+.button-close{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.backdrop-modal.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+  opacity: 0;
+} 
