--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,6 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .nav-list .link,
 .active-link {
   display: inline-block;
@@ -98,6 +97,10 @@ body {
   letter-spacing: 0.02em;
 
   color: var(--title-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.active-link {
+  color: var(--accent-color);
 }
 
 .nav-list .link:hover,
@@ -117,7 +120,6 @@ body {
   height: 4px;
   border-radius: 2px;
   background-color: var(--accent-color);
-  transform: scaleX(1);
 }
 
 .nav-list > li,
@@ -403,7 +405,10 @@ body {
   text-align: center;
   fill: #afb1b8;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} 
+.community svg{
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .community a:hover,
 .community a:focus{
@@ -444,7 +449,11 @@ body {
   border-radius: 4px;
   fill: #afb1b8;
 
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients-list svg{
+ 
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-list a:hover,
 .clients-list a:focus{
@@ -724,4 +733,5 @@ body {
   opacity: 0;
   pointer-events: none;
   opacity: 0;
+  visibility: hidden;
 } 
